crates/termdoc-cli/tests/snapshots/snapshots__unicode_20_plain.snap
---
source: crates/termdoc-cli/tests/snapshots.rs
expression: output
---
# Cell widths

Ideographs:
日本語のテキストはこ
こにあります、そして
折り返しが必要です。

Combining: éééééé
ààààà ñññññ

ZWJ emoji: 👨‍👩‍👧 👩‍💻 🇲🇽

+---------+--------+
| Languag | Sample |
| e       |        |
+---------+--------+
| ja      | 日本語 |
| es      | españo |
|         | l      |
+---------+--------+
