crates/termdoc-cli/tests/snapshots/snapshots__unicode_40_ansi16.snap
---
source: crates/termdoc-cli/tests/snapshots.rs
expression: output
---
<ESC>[0;1;94mCell widths<ESC>[0m

Ideographs:
日本語のテキストはここにあります、そして
折り返しが必要です。

Combining: éééééé ààààà ñññññ

ZWJ emoji: 👨‍👩‍👧 👩‍💻 🇲🇽

<ESC>[0;90m┌──────────┬─────────┐<ESC>[0m
<ESC>[0;90m│<ESC>[0m <ESC>[0;1mLanguage<ESC>[0m <ESC>[0;90m│<ESC>[0m <ESC>[0;1mSample<ESC>[0m  <ESC>[0;90m│<ESC>[0m
<ESC>[0;90m├──────────┼─────────┤<ESC>[0m
<ESC>[0;90m│<ESC>[0m ja       <ESC>[0;90m│<ESC>[0m 日本語  <ESC>[0;90m│<ESC>[0m
<ESC>[0;90m│<ESC>[0m es       <ESC>[0;90m│<ESC>[0m español <ESC>[0;90m│<ESC>[0m
<ESC>[0;90m└──────────┴─────────┘<ESC>[0m
